<REFACTOR> 한번에 램덤 숫자 6개로 로또 만들도록 설정